--- a/index.html
+++ b/index.html
@@ -1,18 +1,25 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>個人作品集</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="台科大企管學生的個人作品集，展示AI應用、交通預測、模型訓練等專案成果。">
-  <meta name="keywords" content="個人網站, 作品集, 台灣科技大學, AI, 模型, 資料分析">
-  <meta name="author" content="Your Name">
+  <meta name="description" content="台科大企管學生的個人作品集，展示AI應用、交通預測、模型訓練等專案成果。" />
+  <meta name="keywords" content="個人網站, 作品集, 台灣科技大學, AI, 模型, 資料分析" />
+  <meta name="author" content="Your Name" />
 
   <!-- Bootstrap & CSS -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <link href="style.css" rel="stylesheet">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+  <style>
+    .card-img-top {
+      width: 100%;
+      height: 200px;
+      object-fit: cover;
+    }
+  </style>
 </head>
 <body>
   <!-- 導覽列 -->
@@ -35,10 +42,18 @@
   </nav>
 
   <!-- 關於我 -->
-  <section id="about" class="container text-center">
-    <h2 class="section-title">個人簡介</h2>
-    <p>我是台灣科技大學企業管理系的學生，擁有數據分析與AI應用的經驗，獲得多項書卷獎與競賽肯定。</p>
-    <img src="attached_assets/20231010_170403.jpg" alt="個人照片" class="img-fluid rounded-circle" style="width: 180px; border: 4px solid #d7ccc8;">
+  <section id="about" class="container py-5">
+    <h2 class="section-title text-center mb-4">個人簡介</h2>
+    <div class="row align-items-center">
+      <div class="col-md-6">
+        <p class="fs-5">
+          我是台灣科技大學企業管理系的學生，擁有數據分析與 AI 應用的經驗，獲得多項書卷獎與競賽肯定。
+        </p>
+      </div>
+      <div class="col-md-6 text-center">
+        <img src="attached_assets/1573121.jpg" alt="個人照片" class="img-fluid" style="width: 240px; border: 4px solid #d7ccc8; border-radius: 12px;">
+      </div>
+    </div>
   </section>
 
   <!-- 競賽經歷 -->
@@ -62,63 +77,87 @@
   </section>
 
   <!-- 作品集 -->
-  <section id="portfolio" class="container">
+  <section id="portfolio" class="container py-5">
     <h2 class="section-title text-center">我的作品</h2>
     <div class="row">
+      <!-- 作品 1 -->
       <div class="col-md-6 col-lg-4 mb-4">
         <article class="card h-100">
-          <a href="project1.html"><img src="attached_assets/148092.jpg" class="card-img-top" alt="交通事故分析"></a>
+          <a href="project1.html">
+            <img src="attached_assets/tired.jpg" alt="疲勞駕駛示意圖" class="card-img-top">
+          </a>
           <div class="card-body">
-            <h5 class="card-title"><a href="project1.html" class="text-decoration-none text-dark">交通事故排除時間預測</a></h5>
-            <p class="card-text">透過數據分析預估事故排除時間，榮獲2024國道競賽優等。</p>
-          </div>
-        </article>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-4">
-        <article class="card h-100">
-          <a href="project2.html"><img src="attached_assets/your_model_image.jpg" class="card-img-top" alt="Teachable Machine 模型"></a>
-          <div class="card-body">
-            <h5 class="card-title"><a href="project2.html" class="text-decoration-none text-dark">Teachable Machine 模型</a></h5>
-            <p class="card-text">利用 Google TM 訓練可辨識手勢的模型。</p>
-          </div>
-        </article>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-4">
-        <article class="card h-100">
-          <a href="project3.html"><img src="attached_assets/148092.jpg" class="card-img-top" alt="智慧交通系統"></a>
-          <div class="card-body">
-            <h5 class="card-title"><a href="project3.html" class="text-decoration-none text-dark">智慧交通系統</a></h5>
-            <p class="card-text">整合交通視覺化與判斷系統。</p>
-          </div>
-        </article>
-      </div>
-      <div class="col-md-6 col-lg-4 mb-4">
-        <article class="card h-100">
-          <a href="project4.html"><img src="attached_assets/fatigue_detection.jpg" class="card-img-top" alt="疲勞駕駛偵測系統"></a>
-          <div class="card-body">
-            <h5 class="card-title"><a href="project4.html" class="text-decoration-none text-dark">疲勞駕駛偵測系統</a></h5>
+            <h5 class="card-title"><a href="project1.html" class="text-decoration-none text-dark">疲勞駕駛偵測系統</a></h5>
             <p class="card-text">以臉部與眼動辨識駕駛疲勞狀態。</p>
           </div>
         </article>
       </div>
+
+      <!-- 作品 2 -->
       <div class="col-md-6 col-lg-4 mb-4">
         <article class="card h-100">
-          <a href="project5.html"><img src="attached_assets/project5.jpg" class="card-img-top" alt="項目五"></a>
+          <a href="project2.html">
+            <img src="attached_assets/21.jpg" class="card-img-top" alt="城市物件辨識系統畫面">
+          </a>
           <div class="card-body">
-            <h5 class="card-title"><a href="project5.html" class="text-decoration-none text-dark">項目五</a></h5>
-            <p class="card-text">項目五的簡要介紹。</p>
+            <h5 class="card-title"><a href="project2.html" class="text-decoration-none text-dark">雙視角城市物件偵測</a></h5>
+            <p class="card-text">透過 AI 即時辨識城市監視畫面中的人物與物件，展示智慧監控應用。</p>
           </div>
         </article>
       </div>
+
+      <!-- 作品 3 -->
       <div class="col-md-6 col-lg-4 mb-4">
         <article class="card h-100">
-          <a href="project6.html"><img src="attached_assets/project6.jpg" class="card-img-top" alt="項目六"></a>
+          <a href="project3.html">
+            <img src="attached_assets/3.jpg" class="card-img-top" alt="Gemma3 多模態系統">
+          </a>
           <div class="card-body">
-            <h5 class="card-title"><a href="project6.html" class="text-decoration-none text-dark">項目六</a></h5>
-            <p class="card-text">項目六的簡要介紹。</p>
+            <h5 class="card-title"><a href="project3.html" class="text-decoration-none text-dark">Gemma3 多模態 LLM 應用</a></h5>
+            <p class="card-text">結合圖片與文字輸入的 AI 模型互動展示，支援多模態輸入理解與生成。</p>
           </div>
         </article>
       </div>
+
+      <!-- 作品 4 -->
+      <div class="col-md-6 col-lg-4 mb-4">
+        <article class="card h-100">
+          <a href="project4.html">
+            <img src="attached_assets/4.jpg" class="card-img-top" alt="圖像生成結果">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title"><a href="project4.html" class="text-decoration-none text-dark">OpenAI 圖像生成應用</a></h5>
+            <p class="card-text">使用 OpenAI DALL·E 3 模型進行圖像創作，自動產出視覺圖像。</p>
+          </div>
+        </article>
+      </div>
+
+      <!-- 作品 5 -->
+      <div class="col-md-6 col-lg-4 mb-4">
+        <article class="card h-100">
+          <a href="project5.html">
+            <img src="attached_assets/5.png" class="card-img-top" alt="法規問答系統畫面">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title"><a href="project5.html" class="text-decoration-none text-dark">GENAI 法規問答系統</a></h5>
+            <p class="card-text">結合 LangChain 與向量資料庫實作 RAG 模型，實現 PDF 法規文件問答功能。</p>
+          </div>
+        </article>
+      </div>
+
+      <!-- ✅ 修改後的作品 6 -->
+      <div class="col-md-6 col-lg-4 mb-4">
+        <article class="card h-100">
+          <a href="project6.html">
+            <img src="attached_assets/6.jpg" class="card-img-top" alt="知識代理人系統">
+          </a>
+          <div class="card-body">
+            <h5 class="card-title"><a href="project6.html" class="text-decoration-none text-dark">GENAI 知識代理人系統</a></h5>
+            <p class="card-text">整合圖資料庫與向量資料庫，建立多工具 AI Agent 系統，支援智慧問答與知識查詢。</p>
+          </div>
+        </article>
+      </div>
+
     </div>
   </section>
 
@@ -129,6 +168,7 @@
     <p>LinkedIn: <a href="https://www.linkedin.com/in/yourprofile" target="_blank">我的 LinkedIn</a></p>
   </section>
 
+  <!-- 頁尾 -->
   <footer class="text-center py-3 bg-primary-custom text-white">
     &copy; 2025 我的個人網站
   </footer>
