--- a/project2.html
+++ b/project2.html
@@ -1,10 +1,205 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <!-- 🔹 頁首設定 -->
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>YouTube 雙視角物件偵測系統</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
+      background-color: #f8f3ef;
+      color: #4e342e;
+    }
+    .section-title {
+      font-weight: bold;
+      font-size: 1.6rem;
+      color: #5d4037;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    ul li {
+      font-size: 1.1rem;
+      line-height: 1.8;
+    }
+    .card {
+      background-color: #fffaf5;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      margin-bottom: 2rem;
+    }
+    pre {
+      background: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1rem;
+      overflow-x: auto;
+    }
+    code {
+      font-family: Consolas, monospace;
+      font-size: 0.95rem;
+      color: #333;
+    }
+  </style>
 </head>
+
 <body>
 
+  <!-- 🔹 導覽列區 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-primary-custom sticky-top" style="background-color: #795548;">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">個人網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProject">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarProject">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#portfolio">返回作品集</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">聯絡我</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 🔹 主內容區塊 -->
+  <section class="container py-5">
+    <!-- 🔸 標題 -->
+    <h1 class="section-title text-center mb-5">YouTube 雙視角物件偵測系統</h1>
+
+    <!-- 🔸 成果圖示 -->
+    <div class="card text-center">
+      <div class="card-body">
+        <img src="attached_assets/2.png" alt="雙路物件偵測畫面" class="img-fluid" style="max-width: 720px; border: 4px solid #ccc;" />
+      </div>
+    </div>
+
+    <!-- 🔸 作品敘述 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧠 作品敘述</h2>
+        <p>
+          隨著公共安全與智慧監控技術的應用日益普及，本專案旨在透過 Mediapipe 搭配 YouTube 串流影像來源，
+          同時進行多路視角的即時物件偵測，以展示 AI 模型在真實監視畫面中的即時辨識能力與穩定性。
+        </p>
+      </div>
+    </div>
+
+    <!-- 🔸 功能介紹 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🔍 功能介紹</h2>
+        <ul>
+          <li>✅ 使用 Mediapipe Object Detection 模組，導入 TFLite 模型</li>
+          <li>✅ 結合 yt_dlp 模組串接兩支 YouTube 串流影片</li>
+          <li>✅ 即時偵測畫面中物件（如人、腳踏車、汽車），並標示信心水準</li>
+          <li>✅ 雙視窗顯示兩地點的物件辨識畫面，支援 Esc 鍵中止</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 🔸 應用場景 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧪 應用場景</h2>
+        <ul>
+          <li>🔎 城市即時監控系統模擬</li>
+          <li>🎓 教學演示與 AI 應用展示</li>
+          <li>📊 AI 模型效能實測與可視化分析</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 🔸 程式碼展示 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">💻 程式碼展示</h2>
+        <pre><code>import cv2
+import yt_dlp
+import mediapipe as mp
+
+# 初始化 Mediapipe 物件偵測器
+base_options = mp.tasks.BaseOptions('models/efficientdet_lite0.tflite')
+options = mp.tasks.vision.ObjectDetectorOptions(base_options, score_threshold=0.2)
+detector = mp.tasks.vision.ObjectDetector.create_from_options(options)
+
+# YouTube 影片 URL
+video_url_1 = "https://www.youtube.com/watch?v=v9rQqa_VTEY"
+video_url_2 = "https://www.youtube.com/watch?v=XUWjAsajKXg"
+
+# 取得影片串流 URL
+def get_stream_url(video_url):
+    ydl_opts = {'format': 'best', 'quiet': True}
+    with yt_dlp.YoutubeDL(ydl_opts) as ydl:
+        info_dict = ydl.extract_info(video_url, download=False)
+    return info_dict['url']
+
+stream_url_1 = get_stream_url(video_url_1)
+stream_url_2 = get_stream_url(video_url_2)
+
+# 開啟影片串流
+cap1 = cv2.VideoCapture(stream_url_1)
+cap2 = cv2.VideoCapture(stream_url_2)
+
+while cap1.isOpened() and cap2.isOpened():
+    success1, frame1 = cap1.read()
+    success2, frame2 = cap2.read()
+    if not success1 or not success2:
+        break
+
+    frame1 = cv2.resize(frame1, (600, 360))
+    frame2 = cv2.resize(frame2, (600, 360))
+
+    frame1_mp = mp.Image(mp.ImageFormat.SRGB, frame1)
+    frame2_mp = mp.Image(mp.ImageFormat.SRGB, frame2)
+
+    detection_result1 = detector.detect(frame1_mp)
+    detection_result2 = detector.detect(frame2_mp)
+
+    for detection in detection_result1.detections:
+        bbox = detection.bounding_box
+        cv2.rectangle(frame1, (bbox.origin_x, bbox.origin_y),
+                      (bbox.origin_x + bbox.width, bbox.origin_y + bbox.height), (100, 200, 0), 1)
+        category = detection.categories[0]
+        result_text = category.category_name + ' (' + str(round(category.score, 2)) + ')'
+        cv2.putText(frame1, result_text, (10 + bbox.origin_x, 20 + bbox.origin_y), 1, 1, (255, 255, 255), 1)
+
+    for detection in detection_result2.detections:
+        bbox = detection.bounding_box
+        cv2.rectangle(frame2, (bbox.origin_x, bbox.origin_y),
+                      (bbox.origin_x + bbox.width, bbox.origin_y + bbox.height), (100, 0, 200), 1)
+        category = detection.categories[0]
+        result_text = category.category_name + ' (' + str(round(category.score, 2)) + ')'
+        cv2.putText(frame2, result_text, (10 + bbox.origin_x, 20 + bbox.origin_y), 1, 1, (255, 255, 255), 1)
+
+    cv2.imshow('B11108037', frame1)
+    cv2.imshow('B11108037_1', frame2)
+
+    if cv2.waitKey(1) & 0xFF == 27:
+        break
+
+cap1.release()
+cap2.release()
+cv2.destroyAllWindows()</code></pre>
+      </div>
+    </div>
+
+    <!-- 🔸 返回按鈕 -->
+    <div class="text-center">
+      <a href="index.html#portfolio" class="btn btn-primary">← 回到作品集</a>
+    </div>
+  </section>
+
+  <!-- 🔹 頁尾 -->
+  <footer class="text-center py-3 bg-primary-custom text-white" style="background-color: #795548;">
+    &copy; 2025 我的個人網站
+  </footer>
+
+  <!-- 🔹 Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
