--- a/project3.html
+++ b/project3.html
@@ -1,10 +1,157 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gemma3 多模態 LLM 系統</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <link href="style.css" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
+      background-color: #f8f3ef;
+      color: #4e342e;
+    }
+    .section-title {
+      font-weight: bold;
+      font-size: 1.6rem;
+      color: #5d4037;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+    }
+    ul li {
+      font-size: 1.1rem;
+      line-height: 1.8;
+    }
+    .card {
+      background-color: #fffaf5;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      margin-bottom: 2rem;
+    }
+    pre {
+      background: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1rem;
+      overflow-x: auto;
+    }
+    code {
+      font-family: Consolas, monospace;
+      font-size: 0.95rem;
+      color: #333;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- 🔹 導覽列區塊 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-primary-custom sticky-top" style="background-color: #795548;">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">個人網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProject">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarProject">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#portfolio">返回作品集</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">聯絡我</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 🔹 主內容區塊 -->
+  <section class="container py-5">
+    <h1 class="section-title text-center mb-5">Gemma3 多模態 LLM 應用系統</h1>
+
+    <!-- 🔸 成果圖 -->
+    <div class="card text-center">
+      <div class="card-body">
+        <img src="attached_assets/33.png" alt="Gemma 多模態 LLM 展示圖" class="img-fluid" style="max-width: 720px; border: 4px solid #ccc;" />
+      </div>
+    </div>
+
+    <!-- 🔸 作品敘述 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧠 作品敘述</h2>
+        <p>
+          本專案展示如何透過 Gemma3 模型實作多模態應用，結合文字與圖片輸入進行理解與生成。用戶可輸入提問並上傳圖片，系統會自動判讀圖片內容並以自然語言回覆，是結合 LLM 與圖像推理的實務範例。
+        </p>
+      </div>
+    </div>
+
+    <!-- 🔸 功能介紹 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🔍 功能介紹</h2>
+        <ul>
+          <li>✅ 整合 Ollama 架構與 Gemma3:4b 多模態模型</li>
+          <li>✅ 支援使用者上傳圖片與輸入文字 prompt</li>
+          <li>✅ 圖片將自動轉為 bytes 並傳送給多模態模型進行判讀</li>
+          <li>✅ 使用者將即時看到推理結果並顯示圖片與文字回覆</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 🔸 應用場景 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧪 應用場景</h2>
+        <ul>
+          <li>🧠 多模態問答與 AI 推理展示</li>
+          <li>🖼️ 圖片分類與說明生成系統原型</li>
+          <li>🎓 教學與 LLM 整合開發練習</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 🔸 程式碼展示 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">💻 程式碼展示</h2>
+        <pre><code>import streamlit as st
+import ollama
+import random
+
+st.title("Gemma3 多模態 LLM 應用範例")
+colors = ['red', 'blue', 'green', 'orange', 'purple']
+user_input = st.text_input("詢問任何問題：", "")
+uploaded_image = st.file_uploader("可同時上傳圖片（jpg/png）", type=["jpg", "jpeg", "png"])
+
+if st.button("send"):
+    if user_input or uploaded_image:
+        st.markdown(f"&lt;span style='color:{random.choice(colors)};'&gt;請稍待片刻，思考中，馬上回答...&lt;/span&gt;", unsafe_allow_html=True)
+        messages = []
+        if uploaded_image:
+            st.image(uploaded_image, caption="上傳的圖片如上，請等待判讀結果...")
+            image_bytes = uploaded_image.getvalue()
+            messages.append({'role': 'user', 'content': user_input, 'images': [image_bytes]})
+        else:
+            messages.append({'role': 'user', 'content': user_input})
+        response = ollama.chat(model='gemma3:4b', messages=messages)
+        st.write(response['message']['content'])
+    else:
+        st.warning("請輸入prompt或上傳圖片！")</code></pre>
+      </div>
+    </div>
+
+    <!-- 🔸 返回按鈕 -->
+    <div class="text-center">
+      <a href="index.html#portfolio" class="btn btn-primary">← 回到作品集</a>
+    </div>
+  </section>
+
+  <!-- 🔹 頁尾 -->
+  <footer class="text-center py-3 bg-primary-custom text-white" style="background-color: #795548;">
+    &copy; 2025 我的個人網站
+  </footer>
+
+  <!-- 🔹 Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
