--- a/project4.html
+++ b/project4.html
@@ -1,10 +1,144 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GENAI - 圖像生成系統</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
+      background-color: #f8f3ef;
+      color: #4e342e;
+    }
+    .section-title {
+      font-weight: bold;
+      font-size: 1.6rem;
+      color: #5d4037;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      border: 4px solid #ccc;
+    }
+    pre {
+      background: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1rem;
+      overflow-x: auto;
+    }
+    code {
+      font-family: Consolas, monospace;
+      font-size: 0.95rem;
+      color: #333;
+    }
+    .card {
+      background-color: #fffaf5;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      margin-bottom: 2rem;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- 導覽列 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-primary-custom sticky-top" style="background-color: #795548;">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">個人網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProject">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarProject">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#portfolio">返回作品集</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">聯絡我</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 主內容 -->
+  <section class="container py-5">
+    <h1 class="section-title text-center mb-5">GENAI - 圖像生成系統</h1>
+
+    <!-- 成果圖示 -->
+    <div class="card text-center">
+      <div class="card-body">
+        <img src="attached_assets/44.png" alt="生成圖像畫面示意" class="img-fluid" style="max-width: 720px;" />
+      </div>
+    </div>
+
+    <!-- 作品敘述 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧠 作品敘述</h2>
+        <p>
+          本作品示範如何透過 Python 與 OpenAI API 結合 DALL·E 模型，進行文字轉圖像的生成任務。使用者輸入提示詞（Prompt），即可取得對應的圖像網址，適用於 AI 藝術創作、生成式設計與創意應用展示。
+        </p>
+      </div>
+    </div>
+
+    <!-- 功能說明 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🔍 功能介紹</h2>
+        <ul>
+          <li>✅ 結合 dotenv 安全讀取 OpenAI API 金鑰</li>
+          <li>✅ 使用 OpenAI Python SDK 呼叫 DALL·E-3 圖像生成模型</li>
+          <li>✅ 提供文字 prompt，自動回傳圖像網址</li>
+          <li>✅ 適用於生成創意視覺內容或快速圖片原型</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 程式碼展示 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">💻 程式碼展示</h2>
+        <pre><code>#Filename: W606_GenAI_ChatGPT_QuickStart_03.py
+import datetime
+
+from openai import OpenAI
+import os
+import openai
+
+from dotenv import load_dotenv
+load_dotenv(override=True)
+
+openai.api_key = os.getenv('OPENAI_API_KEY')
+client = OpenAI(api_key= openai.api_key )
+
+response = client.images.generate(
+    model="dall-e-3",
+    prompt="a white siamese cat",
+    size="1024x1024",
+    quality="standard",
+    n=1,
+)
+
+print(response.data[0].url)
+
+print("\nW6 Assignment 3 | B11108037 |", datetime.datetime.now())
+        </code></pre>
+      </div>
+    </div>
+
+    <!-- 返回連結 -->
+    <div class="text-center mt-4">
+      <a href="index.html#portfolio" class="btn btn-primary">← 回到作品集</a>
+    </div>
+  </section>
+
+  <!-- 頁尾 -->
+  <footer class="text-center py-3 bg-primary-custom text-white" style="background-color: #795548;">
+    &copy; 2025 我的個人網站
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
