--- a/project5.html
+++ b/project5.html
@@ -1,10 +1,142 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hant">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>GENAI - LangChain RAG 法規問答系統</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
+  <style>
+    body {
+      font-family: "Segoe UI", "Microsoft JhengHei", sans-serif;
+      background-color: #f8f3ef;
+      color: #4e342e;
+    }
+    .section-title {
+      font-weight: bold;
+      font-size: 1.6rem;
+      color: #5d4037;
+    }
+    img {
+      max-width: 100%;
+      height: auto;
+      border-radius: 12px;
+      border: 4px solid #ccc;
+    }
+    pre {
+      background: #f5f5f5;
+      border: 1px solid #ccc;
+      border-radius: 8px;
+      padding: 1rem;
+      overflow-x: auto;
+    }
+    code {
+      font-family: Consolas, monospace;
+      font-size: 0.95rem;
+      color: #333;
+    }
+    .card {
+      background-color: #fffaf5;
+      border: none;
+      border-radius: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.05);
+      margin-bottom: 2rem;
+    }
+  </style>
 </head>
 <body>
 
+  <!-- 導覽列 -->
+  <nav class="navbar navbar-expand-md navbar-light bg-primary-custom sticky-top" style="background-color: #795548;">
+    <div class="container">
+      <a class="navbar-brand text-white" href="index.html">個人網站</a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarProject">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarProject">
+        <ul class="navbar-nav ms-auto">
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#portfolio">返回作品集</a></li>
+          <li class="nav-item"><a class="nav-link text-white" href="index.html#contact">聯絡我</a></li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+
+  <!-- 主內容 -->
+  <section class="container py-5">
+    <h1 class="section-title text-center mb-5">GENAI - LangChain 法規問答系統</h1>
+
+    <!-- 成果圖示 -->
+    <div class="card text-center">
+      <div class="card-body">
+        <img src="attached_assets/55.png" alt="RAG 系統畫面" class="img-fluid" style="max-width: 720px;" />
+      </div>
+    </div>
+
+    <!-- 作品敘述 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🧠 作品敘述</h2>
+        <p>
+          本作品使用 LangChain 串接 OpenAI 與向量資料庫，實作一個具備法規問答功能的 RAG（Retrieval-Augmented Generation）系統。
+          使用者可上傳 PDF 法規文件，系統將分析並擷取相關段落，結合 GPT 模型進行繁體中文問答。
+        </p>
+      </div>
+    </div>
+
+    <!-- 功能介紹 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">🔍 功能介紹</h2>
+        <ul>
+          <li>✅ 上傳 PDF 法規文件，自動分段與嵌入（embedding）處理</li>
+          <li>✅ 使用 LangChain + Chroma 建立檢索式問答資料庫</li>
+          <li>✅ 使用者輸入問題後自動檢索上下文並生成答案</li>
+          <li>✅ 可下載問答與檢索紀錄，支援中文查詢</li>
+        </ul>
+      </div>
+    </div>
+
+    <!-- 程式碼展示 -->
+    <div class="card">
+      <div class="card-body">
+        <h2 class="section-title">💻 程式碼展示</h2>
+        <pre><code># W1208_GenAI_LC_RAG_08_streamlit.py
+
+from langchain_openai import ChatOpenAI
+from langchain_community.document_loaders import PyPDFLoader
+from langchain_chroma import Chroma
+from langchain_text_splitters import RecursiveCharacterTextSplitter
+from langchain.schema import HumanMessage
+
+docs = PyPDFLoader("law.pdf").load()
+splitter = RecursiveCharacterTextSplitter(chunk_size=500)
+chunks = splitter.split_documents(docs)
+
+db = Chroma.from_documents(documents=chunks)
+retriever = db.as_retriever(search_kwargs={"k": 6})
+
+query = "酒後開車罰多少錢？"
+context = "\n".join([doc.page_content for doc in retriever.invoke(query)])
+
+prompt = f"請根據以下內容回答問題:\n\n{context}\n\n問題: {query}"
+response = ChatOpenAI().invoke([HumanMessage(content=prompt)])
+print(response.content)
+        </code></pre>
+      </div>
+    </div>
+
+    <!-- 返回按鈕 -->
+    <div class="text-center">
+      <a href="index.html#portfolio" class="btn btn-primary">← 回到作品集</a>
+    </div>
+  </section>
+
+  <!-- 頁尾 -->
+  <footer class="text-center py-3 bg-primary-custom text-white" style="background-color: #795548;">
+    &copy; 2025 我的個人網站
+  </footer>
+
+  <!-- Bootstrap JS -->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
