--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>個人作品集</title>
 
   <!-- SEO Meta Tags -->
-  <meta name="description" content="台科大企管學生的個人作品集，展示AI應用、交通預測、模型訓練等專案成果。" />
+  <meta name="description" content="大家好我是台科大企管學生—駱妤榛這是我的個人作品集，展示AI應用、交通預測、模型訓練等專案成果。" />
   <meta name="keywords" content="個人網站, 作品集, 台灣科技大學, AI, 模型, 資料分析" />
   <meta name="author" content="Your Name" />
 
