--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <div class="row align-items-center">
       <div class="col-md-6">
         <p class="fs-5">
-          我是台灣科技大學企業管理系的學生，擁有數據分析與 AI 應用的經驗，獲得多項書卷獎與競賽肯定。
+          大家好~我是台科大企管學生—駱妤榛這是我的個人作品集，展示AI應用、智慧偵測、模型訓練等成果。
         </p>
       </div>
       <div class="col-md-6 text-center">
